syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/empty.proto";

package v1;

message GetUpgradeStatusResponse {
    CentralUpgradeStatus upgradeStatus = 1;
}

service CentralHealthService {
    rpc GetUpgradeStatus(Empty) returns (GetUpgradeStatusResponse) {
        option (google.api.http) = {
            get: "/v1/centralhealth/upgradestatus"
        };
    }
}

message CentralUpgradeStatus {
    // Current Central Version
    string version = 1;

    // The version of previous clone in Central. This is the version we can force rollback to.
    string force_rollback_to = 2;

    // If true, we can rollback to the current version if an upgrade failed.
    bool can_rollback_after_upgrade = 3;

    // Current disk space stats for upgrade
    int64 space_required_for_rollback_after_upgrade = 4 [deprecated = true];
    int64 space_available_for_rollback_after_upgrade = 5 [deprecated = true];
}
